--- a/WinAuth7/Authenticatior/packages.config
+++ b/WinAuth7/Authenticatior/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Coding4Fun.Toolkit.Net" version="2.0.7" targetFramework="wp71" />
   <package id="Microsoft.Bcl" version="1.1.6" targetFramework="wp71" />
+  <package id="Microsoft.Bcl.Async" version="1.0.165" targetFramework="wp71" />
   <package id="Microsoft.Bcl.Build" version="1.0.13" targetFramework="wp71" />
 </packages>
