--- a/WinAuth7/WinAuth/WinAuth.csproj
+++ b/WinAuth7/WinAuth/WinAuth.csproj
@@ -50,6 +50,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Coding4Fun.Toolkit.Controls">
+      <HintPath>..\packages\Coding4Fun.Toolkit.Controls.2.0.7\lib\wp71\Coding4Fun.Toolkit.Controls.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Phone" />
     <Reference Include="Microsoft.Phone.Controls, Version=7.0.0.0, Culture=neutral, PublicKeyToken=24eec0d8c86cda1e, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Phone.Controls.Toolkit">
@@ -148,11 +151,13 @@
     <Content Include="appicon1.png" />
     <Content Include="Assets\AppBar\add.png" />
     <Content Include="Assets\AppBar\AlignmentGrid.png" />
+    <Content Include="Assets\AppBar\basecircle.png" />
     <Content Include="Assets\AppBar\delete.png" />
     <Content Include="Assets\AppBar\enroll.png" />
     <Content Include="Assets\AppBar\restore.png" />
     <Content Include="Assets\AppBar\select.png" />
     <Content Include="Assets\AppBar\sync.png" />
+    <Content Include="Assets\AppBar\arrow.png" />
     <Content Include="Assets\ApplicationIcon.png" />
     <Content Include="Assets\Tiles\FlipCycleTileLarge.png" />
     <Content Include="Assets\Tiles\FlipCycleTileMedium.png" />
